jump to move, edit game info, tool symbols, fix delete bug

--- a/player/css/player-ie6.css
+++ b/player/css/player-ie6.css
@@ -13,3 +13,6 @@
 .eidogo-player .nav-tree a.current {
     filter: none;
 }
+.eidogo-player .tools-select {
+    font-family: arial;
+}
