--- a/player/css/player.css
+++ b/player/css/player.css
@@ -173,7 +173,7 @@
     clear: right;
     background: #744;
     width: 315px;
-    padding: 5px 5px 5px 5px;
+    padding: 5px;
     margin: 5px 0 0 0;
 }
 .eidogo-player .tools-label {
@@ -205,7 +205,8 @@
     display: none;
 }
 .eidogo-player .tools-select, .eidogo-player .search-algo {
-    font-size: 11px;
+    font-family: verdana;
+    font-size: 11px !important;
 }
 .eidogo-player .search-algo {
     margin: 0 0 0 4px;
@@ -274,7 +275,7 @@
     border-right: none;
     border-bottom: 1px solid #999;
 }
-.eidogo-player .comments-edit-done {
+.eidogo-player .comments-edit-done, .eidogo-player .game-info-edit-done {
     clear: right;
     float: right;
     width: 311px;
@@ -293,6 +294,29 @@
 }
 .eidogo-player .comments a {
     color: #008;
+}
+.eidogo-player .game-info-edit {
+    display: none;
+    z-index: 9999;
+    width: 325px;
+    height: 300px;
+    background: #ccc;
+    margin: 0;
+    padding: 0;
+}
+.eidogo-player .game-info-edit-form {
+    height: 240px;
+    overflow: auto;
+    padding: 15px 0px 15px 10px;
+}
+.eidogo-player .game-info-edit-form input {
+    font-family: arial, helvetica, verdana, sans-serif;
+    font-size: 11px;
+    border: 1px solid #888;
+    width: 200px;
+}
+.eidogo-player .game-info-edit-done {
+    margin: 0;
 }
 .eidogo-player .search-container {
 	clear: right;
